Fix finish page in dark mode

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -125,6 +125,7 @@ html[data-dark='true'] {
   .black,
   .btn,
   .dock__card span,
+  label,
   a > .card {
     color: map-get($palette, smoke) !important;
   }
